# backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: main.yml
alembic/: env.py
docker-entrypoint-initdb.d/: init.sql
pedidos_rapidos/: app.py  database.py  main.py
pedidos_rapidos/cart/: crud.py  routes.py  schemas.py
pedidos_rapidos/items/: crud.py  models.py  routes.py  schemas.py
pedidos_rapidos/orders/: crud.py  routes.py  schemas.py
pedidos_rapidos/products/: crud.py  routes.py  schemas.py
pedidos_rapidos/sellers/: crud.py  models.py  routes.py  schemas.py
pedidos_rapidos/shops/: crud.py  routes.py  schemas.py
pedidos_rapidos/user/: routes.py
pedidos_rapidos/users/: crud.py  exception.py  routes.py  schemas.py  services.py
pedidos_rapidos/utils/: enum_utils.py  notifications.py  order_state.py  product_utils.py
script/: deploy.sh
tests/: conftest.py  test_carts.py  test_orders.py  test_pedidos_rapidos.py  test_products.py  test_sellers.py  test_shop.py  test_users.py
