[tool.poetry]
name = "pedidos_rapidos"
version = "0.1.0"
description = ""
authors = ["Paulo Cesar Cuneo <cuneo.paulo.cesar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
alembic = "^1.7.7"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
SQLAlchemy = "1.4.35"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
requests = "^2.27.1"
autopep8 = "^1.6.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
